--- a/urlshortner/templates/index.html
+++ b/urlshortner/templates/index.html
@@ -2,10 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from cb.lk/admin/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 16 Oct 2017 16:27:52 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -24,19 +21,15 @@
 <div class="nav-container"></div>
 <div id="homeHeading" class="col-lg-12 center-block">
     <h2 class="home_heading">A Link Contains a lot more than you think</h2>
-    <h3 class="home_subheading">Shorten and Share your links with Coding Blocks URL Shortner</h3>
     <!--<center><button class="btn btn-lg btn-filled hover-light" id="shortForm" type="submit">SHORTEN</button></center>-->
 </div>
 
 <div id="shortcodeform" class="col-lg-12 col-lg-offset-12 hovercard formbox">
-    <div class="vnu"><img alt="Logo" class="center-block mimg" width="80%" src="img/logo.png">
+    <div class="vnu"><img alt="Logo" class="center-block mimg" width="80%" src="/media/img/logo.png">
     </div>
     <div class="form-group row">
         <input class="form-control center-block hovercard-light" id="url" placeholder="URL" name="url">
-        <input class="form-control center-block hovercard-light" id="code" placeholder="Custom Shortcode (optional)" name="code">
-        <input class="form-control center-block hovercard-light" id="secret" type="password"
-               placeholder="Secret (needed to make custom)" name="secret">
-        <button class="btn btn-filled hover-light" id="submit" type="submit">
+        <button class="btn btn-filled hover-light" id="submit" type="submit" data-toggle="modal" data-target=".bd-example-modal-lg">
             Shorten
         </button>
     </div>
@@ -51,9 +44,35 @@
         <a href="#" target="_blank">Terms of Service</a>
     </p>
 </div>
-
+<div class="container">
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>URL Shortner</h1>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <ul class="list-group">
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Cras justo odio
+                        <span class="badge badge-primary badge-pill">14</span>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Dapibus ac facilisis in
+                        <span class="badge badge-primary badge-pill">2</span>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Morbi leo risus
+                        <span class="badge badge-primary badge-pill">1</span>
+                      </li>
+                    </ul> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
-
-<!-- Mirrored from cb.lk/admin/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 16 Oct 2017 16:27:59 GMT -->
 </html>
