--- a/urlshortner/templates/index.html
+++ b/urlshortner/templates/index.html
@@ -11,9 +11,103 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/index.css' %}" rel="stylesheet">
     <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/index.js' %}"></script>
     <script src="{% static 'js/analytics.js' %}"></script>
+
+    <style>
+        .parameter{
+            font-size: 20px;
+            font-style: oblique;
+            font-family: fantasy;
+            font-weight: bolder;
+            text-align: center;
+        }
+        .right{
+            color: #32CD32;
+            font-size:30px;
+        }
+        .cross{
+            font-size: 30px;
+            color: #ff3232;
+        }
+        .Low{
+            font-size: 21px;
+            font-weight: bold;
+            color: yellow;
+        }
+        .Medium
+        {
+            font-size: 21px;
+            font-weight: bold;
+            color: orange;
+        }
+        .High
+        {
+            font-size: 21px;
+            font-weight: bold;
+            color: red;
+        }
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+            margin-right: 0;
+            margin-left: 0;
+        }
+        #card
+        {
+            background: white;
+            width: 80%;
+            margin: auto;
+            border-radius: 10px; 
+            margin-top:15vh
+        }
+
+        .short
+        {
+            height: 35px!important;
+            display: block;
+            width: 70%;
+            padding: 6px 12px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.42857143;
+            color: #5bc0de;
+            background-color: #4c4c4c;
+            border: 1px solid #f5f5f5;
+            font-family: inherit;
+            border-radius: 4px;
+            margin: auto;
+        }
+
+        .safe
+        {
+            font-weight: bolder;
+            color: #32CD32;
+        }
+
+        .phishing
+        {
+            color: #ff3232;
+            font-weight: bolder;
+        }
+        @media(max-width:700px) 
+        {
+            #card
+            {
+                width:100%;
+            }
+        }
+    </style>
 
 </head>
 
@@ -24,7 +118,7 @@
     <!--<center><button class="btn btn-lg btn-filled hover-light" id="shortForm" type="submit">SHORTEN</button></center>-->
 </div>
 
-<div id="shortcodeform" class="col-lg-12 col-lg-offset-12 hovercard formbox">
+<div id="shortcodeform" class="col-sm-6 col-sm-offset-3 hovercard col-xs-12" style="margin-top:7vh;">
     <div class="vnu"><img alt="Logo" class="center-block mimg" width="80%" src="/media/img/logo.png">
     </div>
     <div class="form-group row">
@@ -44,32 +138,59 @@
         <a href="#" target="_blank">Terms of Service</a>
     </p>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-12">
-                        <h1>URL Shortner</h1>
+<div id="modal" class="row modal">
+    <div id="card" class="card" style="">
+        <div class="card-body">
+
+            <h1 class="text-center">URL Shortner</h1>
+                <div id="shortUrl" class="short">
+                    <!-- <a href="">msra</a>
+                    <button class="btn btn-filled hover-light copy"> Copy </button> -->
+                </div>
+            
+            <div class="col-12" style="margin-top: 6%;">
+                <ul class="list-group">
+                  <li class="list-group-item d-flex align-items-center">
+                    <div id="site_popularity" class="row">
+                        <div class="col-xs-6 parameter">Site Popularity</div>
+                        <!-- <div class="col-xs-6"><i class="fa fa-check right" aria-hidden="true"></i></div> -->
                     </div>
-                </div>
-                <div class="col-12">
-                    <ul class="list-group">
-                      <li class="list-group-item d-flex justify-content-between align-items-center">
-                        Cras justo odio
-                        <span class="badge badge-primary badge-pill">14</span>
-                      </li>
-                      <li class="list-group-item d-flex justify-content-between align-items-center">
-                        Dapibus ac facilisis in
-                        <span class="badge badge-primary badge-pill">2</span>
-                      </li>
-                      <li class="list-group-item d-flex justify-content-between align-items-center">
-                        Morbi leo risus
-                        <span class="badge badge-primary badge-pill">1</span>
-                      </li>
-                    </ul> 
-                </div>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center">
+                    <div id="length_of_url" class="row">
+                        <div class="col-xs-6 parameter">Length Of URL</div>
+                        <!-- <div class="col-xs-6"><i class="fa fa-times cross" aria-hidden="true"></i></div> -->
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center">
+                    <div id="existing_dns_record" class="row">
+                        <div class="col-xs-6 parameter">Existing DNS Record</div>
+                    </div>
+                  </li>
+                  <li  class="list-group-item d-flex align-items-center">
+                    <div id="age_of_domain" class="row">
+                        <div class="col-xs-6 parameter">Age Of Domain</div>
+                        
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center">
+                    <div id="ports" class="row">
+                        <div class="col-xs-6 parameter">Ports</div>
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center text-center">
+                    <p><h3 style="font-weight:bolder;">Result:&nbsp;<span id="result"></span></h3></p>
+                  </li>
+                  <li class="list-group-item" style="height:60px;">
+                    <div >
+                        <button id="cross" class="btn btn-danger" style="float: right;">Close</button>
+                    </div>
+                </li>
+                </ul> 
+                
+                
             </div>
+            
         </div>
     </div>
 </div>
